Now the follow is checked when opening a profile
